# cnbt

./: LICENSE.txt  main.c  meson.build
include/cnbt/: nbt.h
src/: meson.build  nbt_arrays.c  nbt_internal.h  nbt_mem.c
